tests/NormalTests/paczka1/fuzzy1/65632771.err
Error in line 22: A646 A686 11,45
Error in line 9: A646 A686 17,9
Error in line 34: A646 A654 88,0
